--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeigniter-module-generator",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,10 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.19",
     "core-js": "^3.6.4",
+    "dexie": "^2.0.1",
+    "jszip": "^3.5.0",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
