--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
